[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mvnx"
version = "0.1.18"
description = "A lightweight commandline parser for the MVNX motion capture file format"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
    { name = "Ed", email = "user.7o7gor2bhvp80073@tu-dresden.de" }
]
urls = { Homepage = "https://github.com/edscher/mvnx" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "tqdm",
    "h5py"
]

[project.scripts]
mvnx = "mvnx:main"

[tool.setuptools.packages.find]
where = ["."]
